[add] 자세히 보기 페이지 animation 구성, 광고 추가

--- a/index.html
+++ b/index.html
@@ -20,18 +20,11 @@
             <div class="printer-tray">
                 <div class="printer-tray-paper">
                     <span class="hash-tag">#인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까</span>
+                    <img class="advertise" src="./images/adv_likelion.png">
                 </div>
             </div>
         </div>
     </div>
     
-    <div class="lightbox">
-        <div class="lightbox-content">
-            <div class="hash-result">
-                #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까
-            </div>
-            <button class="reset_btn">다시하기</button>
-        </div>
-    </div>
 </body>
 </html>
