[add] adding main page:star:

--- a/index.html
+++ b/index.html
@@ -4,27 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>해쉬태그 생성기</title>
-    <link rel="Stylesheet" type="text/css" href="style.css">
-    <script src="index.js"></script>
-  </head>
+    <link rel="Stylesheet" type="text/css" href="index.css">
+</head>
 <body>
-    <div class="printer">
-        <div class="printer-face printer-top">
-            <div class="printer-loader">
-                <div class="printer-loader-paper"></div>
-            </div>
-            <button class="print-btn" aria-label="print"></button>
-        </div>
-        <div class="printer-face printer-front">
-            <h1 class="printer-logo">Hash Tag Maker</h1>
-            <div class="printer-tray">
-                <div class="printer-tray-paper">
-                    <span class="hash-tag">#인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까 #인생이란 #뭘까</span>
-                    <img class="advertise" src="./images/adv_likelion.png">
-                </div>
-            </div>
-        </div>
+    <div class="main_container">
+        <h1>Make your Attractive Instagram Hashtag</h1>
+        <img class="insta" src="https://upload.wikimedia.org/wikipedia/commons/3/30/The_Instagram_Logo.jpg">
+        <form>
+            <textarea placeholder="해쉬태그 못쓰겠어?"></textarea>
+            <a href="printer.html">
+                <input class="go-make" type="button" value="gogo">
+            </a>
+        </form>
     </div>
-    
 </body>
 </html>
